--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,202 @@
-.App {
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  overflow-x: hidden;
+}
+
+:root {
+  --mainColor: #f57224;
+  --white: #fff;
+  --black: #000;
+  --lightDark: #222;
+}
+
+body {
+  font-family: 'Lato', sans-serif;
+}
+/* /////////////NAVBAr Style ///////////////////// */
+nav {
+  width: 100vw;
+  height: 10vh;
+background-color: var(--white);
+  padding: 0 100px;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, .1);
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  position: fixed;
+  top: 0;
+  z-index: 1;
+}
+
+nav ul {
+  list-style: none;
+}
+
+nav ul li a {
+  text-decoration: none;
+}
+
+.left a {
+  font-weight: 900;
+  color: var(--mainColor);
+  font-size: 20px;
+}
+
+.shoppingCart i {
+  font-size: 26px;
+  color: var(--lightDark);
+  margin-right: 15px;
+}
+
+.right a {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.cartCount {
+  display: inline-block;
+  width: 30px;
+  height: 30px;
+  background: var(--mainColor);
+  color: var(--white);
+  border-radius: 50%;
+  font-size: 20px;
+  padding: 3px 0;
   text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+/* ///////////Helper class /////////// */
+.container{
+  width: 100vw;
+  padding: 0 100px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
+/* ///////////BAnner Style//////////// */
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+header{
+  height: 50vh;
+  width: 100%;
+  margin-top: 2vh ;
+  background: url(./assets/banner.jpg) no-repeat;
+  
+  background-position: center;
+  background-size: cover;
+
+  color: var(--white);
+}
+.headerText{
+  background:rgba(0, 0, 0, .5);
+  width: 100%;
+  height: 100%;
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+}
+.headerText h1{
+  font-size: 35px;
+}
+.headerText p{
+    margin-top: 10px;
+    font-size: 20px;
 }
 
-.App-link {
-  color: #61dafb;
+
+/* ////////////Product Styling////////// */
+
+.products{
+  width: 100%;
+display: flex;
+flex-wrap: wrap;
+/* justify-content: space-around; */
+}
+.product{
+  /* margin-top: 10px; */
+  width: 25%;
+  padding: 0 12px;
+  margin: 20px 0;
+  overflow: hidden;
+  position: relative;
+
+
+}
+.product-image{
+  width: 100%;
+  height: 200px;
+}
+.product-image img{
+  width: 100%;
+  height: auto;
+  overflow: hidden;
+}
+.product-detail{
+ /* padding: 15px 10px; 
+ text-align: center; */
+ background-color: var(--white);
+ display: flex;
+ flex-direction: column;
+ justify-content: center;
+ align-items: center;
+ border-left: 1px solid #fafafa;
+ border-right: 1px solid #fafafa;
+
+}
+.product-name{
+ font-size: 20px;
+ font-weight: 700; 
+ margin: 20px 0;
+}
+.product-price{
+  font-size: 20px;
+  font-weight: 500; 
+  margin-bottom: 10px;
+ }
+ /* .product-status{
+  font-size: 20px;
+  font-weight: 700; 
+ } */
+ .add-to-cart{
+   background-color: var(--mainColor);
+   padding: 10px 20px;
+   width: 100%;
+   color: var(--white);
+   text-transform: uppercase;
+   cursor: pointer;
+   text-align: center;
+   margin-top: 10px;
+   font-weight: bold;
+ }
+ .hot{
+   position: absolute;
+   top: 0;
+   
+   background-color: var(--mainColor);
+   padding: 5px 10px;
+   font-weight: bold;
+   color: var(--white);
+ }
+ .new{
+  position: absolute;
+  top: 0;
+ 
+  background-color: green;
+  padding: 5px 10px;
+  font-weight: bold;
+  color: var(--white);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+/* ///////////////Cart component style///////// */
+.cart-container{
+  margin-top: 10vh;
+}
+
+
+/* ///////////////Not Found Component style/////////// */
+
+.not-found{
+      margin-top: 12vh;
+
 }
